manifests/pgadmin/overlays/test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pgadmin
spec:
  rules:
  - host: pgadmin.test.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  tls:
  - hosts:
    - pgadmin.test.net
    secretName: tls-test-net-wildcard
